<resources>
    <string name="app_name">CrownPizzaApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_customer_name">Angela Chu</string>
    <string name="nav_header_customer_email">angelachu@crownpizza.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_FAQ">FAQ</string>
    <string name="menu_AboutUs">About Us</string>
    <string name="menu_FoodItems">Food Items</string>
    <string name="menu_MakeOrder">Make Order</string>
    <string name="menu_FREEPIZZA">FREE PIZZA</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--    Strings for make MAKE ORDER Fragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeOrderText">Express Delivery</string>
    <string name="placeOrderContentText">No need to wait, we deliver whenever, wherever, right to your doorstep! PLACE ORDER NOW!</string>
    <string name="callUsButton">Call Us</string>
    <string name="TextUsButton">Text Us</string>
    <string name="ShopsButton">Shops</string>

    <!--    Strings for make About us Fragment-->

    <string name="aboutUsText">About Us</string>
    <string name="aboutUsContent">CROWN PIZZA </string>
    <string name="aboutUs">
        Time flies when you do what you love. We know because we’ve been making great
        pizza since 1967. Along the way, we’ve grown to more than 750 restaurants from coast to coast,
        becoming a trusted brand and leader in the foodservice industry. We’re proud of the quality food we make
        – and the difference we make in communities
        across Canada. We’ve made a lot of pies – and memories –
        over the years. Find out what goes into both!</string>

    <!--    Strings for make Coupon Fragment-->
    <string name="couponTitle">YOUR NUMBER IS</string>
    <string name="code">000</string>
    <string name="couponClaimMessage">visit the closest shop to claim your discount (Make sure to take a screenshot) </string>
    <string name="tryAgainButtonText">TRY AGAIN</string>

    <!--    Strings for CREDITS -->
    <string name="txtCredits">https://www.pexels.com/photo/appetizing-assorted-pizza-with-meat-products-and-vegetables-4394612/</string>
    <string name="txtCredits1">https://www.pexels.com/photo/freshly-baked-pizza-2295285/</string>
    <string name="txtCredits2">https://www.pexels.com/photo/cooked-food-2471171/</string>
    <string name="txtCredits3">https://www.pexels.com/photo/cheese-pizza-2762942/</string>
    <string name="txtCredits4">https://www.pexels.com/photo/person-holding-a-slice-of-pizza-4109111/</string>
    <string name="txtCredits5">https://www.pexels.com/photo/person-slicing-pizza-2233348/</string>
    <string name="txtCredits6">https://www.pexels.com/photo/sliced-pizza-on-plate-845798/</string>
    <string name="txtCredits7">https://www.pexels.com/photo/1-piece-sliced-pizza-in-white-ceramic-plate-845808/</string>
    <string name="credits">CREDITS</string>


</resources>