<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_FAQ"
            android:icon="@drawable/faqlogo"
            android:title="@string/menu_FAQ" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/about_us_logo"
            android:title="@string/menu_AboutUs" />
        <item
            android:id="@+id/nav_foodItems"
            android:icon="@drawable/food_items_logo"
            android:title="@string/menu_FoodItems" />
        <item
            android:id="@+id/nav_makeOrder"
            android:icon="@drawable/order_stores_logo"
            android:title="@string/menu_MakeOrder" />
        <item
            android:id="@+id/nav_freePizza"
            android:icon="@drawable/free_pizza_logo"
            android:title="@string/menu_FREEPIZZA" />

    </group>
</menu>